--- a/youtube-dlen.html
+++ b/youtube-dlen.html
@@ -59,7 +59,7 @@
     <section>
       <h2 id="installazione">installation</h2>
       <hr>
-      <p>the best available guide is the official one; you can find it <a href="https://ytdl-org.github.io/youtube-dl/download.html" title="guida ufficiale"><u>here</u></a>.</p>
+      <p>the best available guide is the official one; you can find it <a href="https://ytdl-org.github.io/youtube-dl/download.html" title="official guide"><u>here</u></a>.</p>
     </section>
   </body>
 </html>
