--- a/youtube-dlen.html
+++ b/youtube-dlen.html
@@ -51,7 +51,7 @@
       <blockquote>
         <p>$ youtube-dl https://www.youtube.com/watch?v=dQw4w9WgXcQ</p>
       </blockquote>
-      <p>to see  all possible options  you can consult the documentation <a href="https://github.com/ytdl-org/youtube-dl/blob/master/README.md#readme" title="documentazione ufficiale"><u>here</u></a> or use the following command:</p>
+      <p>to see  all possible options  you can consult the documentation <a href="https://github.com/ytdl-org/youtube-dl/blob/master/README.md#readme" title="official documentation"><u>here</u></a> or use the following command:</p>
       <blockquote>
         <p>$ youtube-dl -h</p>
       </blockquote>
