--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   </style>
 </head>
 <html>
-    <BODY BGCOLOR="#021C1E">
+  <link rel="icon" href="icon.png">  
+  <BODY BGCOLOR="#021C1E">
   <header>
     <h1><a href="index.html" title="home">HOFUpp (Andrea Ventura)</a></h1>
   </header>
