--- a/youtube-dlen.html
+++ b/youtube-dlen.html
@@ -24,6 +24,7 @@
   </style>
 </head>
 <html>
+  <link rel="icon" href="icon.png">
   <BODY BGCOLOR="#021C1E">
   <header>
     <h1><a href="index.html" title="home">HOFUpp (Andrea Ventura)</a></h1>
@@ -32,7 +33,7 @@
     <h1 id="youtube-dl">youtube-dl</h1>
     <hr>
     <section>
-      <p><strong>youtube-dl</strong> is an open-source and multiplatform command-line program to download video(and audio) from youtube and some other <a href="https://ytdl-org.github.io/youtube-dl/supportedsites.html" title="youtube-dl supported sites"><u>sites</u></a>.</p>
+      <p><strong>youtube-dl</strong> is an open-source and multiplatform command-line program to download videos(and audio) from youtube and some other <a href="https://ytdl-org.github.io/youtube-dl/supportedsites.html" title="youtube-dl supported sites"><u>sites</u></a>.</p>
     </section>
     <section>
       <h2 id="why should I use it?">why should I use it?</h2>
