--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <h1 id="hello-there">hello there!</h1>
       <hr>
-      <p>I’m a random dude from italy who likes linux, free-software, programming and anime.</p>
+      <p>I’m a random guy from Italy who likes linux, free-software, programming and anime.</p>
       <article>
         <h2 id="articles">articles</h2>
         <hr>
