--- a/index.html
+++ b/index.html
@@ -42,16 +42,10 @@
         <h4>recommended software: </h4>
         <ul>
           <p>08-09-2019 <a href="youtube-dlen.html" title="youtube-dl basics"><u>youtube-dl</u></a></p>
-          <p>??-??-???? waifu2x</p>
-        </ul>
-        <h4>recommended guides: </h4>
-        <ul>
-          <p>??-??-???? GNU/linux</p>
-          <p>??-??-???? markdown</p>
         </ul>
         <h4>miscellaneous: </h4>
         <ul>
-          <p>??-??-???? what is free software?</p>
+          <p>??-??-???? what is FOSS?</p>
         </ul>
       </article>
     </main>
