--- a/youtube-dlen.html
+++ b/youtube-dlen.html
@@ -38,7 +38,7 @@
     <section>
       <h2 id="why should I use it?">why should I use it?</h2>
       <hr>
-      <p><strong>youtube-dl</strong> youtube-dl is the best tool for downloading video from most web pages. A problem for some user could be that the program is usable only from the terminal);</p>
+      <p><strong>youtube-dl</strong> is the best tool for downloading video from most web pages. A problem for some user could be that the program is usable only from the terminal);</p>
       <p>if someone doesn't want to learn how to use the terminal there is another project called youtube-dl-gui that adds a graphical interface to youtube-dl. You can download it <a href="https://mrs0m30n3.github.io/youtube-dl-gui/" title="youtube-dl-gui homepage"><u>here</u></a></p>
     </section>
     <section>
